
[package]
name = "azure_keyvault_cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_identity = "0.5.0"
azure_security_keyvault_secrets = "0.4.0"
tokio = { version = "1.0", features = ["full"] }